[package]
name = "pg-sni-muxer"
description = "TLS SNI (de)muxer for Postgres connections"
version = "0.1.0"
edition = "2024"
authors = ["Mateusz Woźniak <matisiek11@gmail.com>"]
repository = "https://github.com/rust-lang/cargo"

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3"

[[example]]
name = "simple"
path = "examples/simple.rs"
